@@ -1,24 +1,30 @@
 package com.example.autodeal.user.service;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
-import com.example.autodeal.user.dto.UserDto;
+import com.example.autodeal.exception.UserAlreadyExistsException;
+import com.example.autodeal.exception.UserNotFoundException;
+import com.example.autodeal.user.dto.SignUpDto;
 import com.example.autodeal.user.model.UserModel;
 import com.example.autodeal.user.model.UserRole;
 import com.example.autodeal.user.repository.UserRepository;
 import com.example.autodeal.user.repository.UserRoleRepository;
+import com.example.autodeal.user.model.VerificationToken;
+import com.example.autodeal.user.repository.VerificationTokenRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 public class UserServiceTest {
 
@@ -28,15 +34,22 @@ public class UserServiceTest {
     @Mock
     private UserRoleRepository userRoleRepository;
 
+    @Mock
+    private VerificationTokenRepository verificationTokenRepository;
+
+    @Mock
+    private PasswordEncoder passwordEncoder;
+
+    @Mock
+    private NotificationService notificationService;
+
     @InjectMocks
     private UserService userService;
 
     private UserModel userModel;
-
     @BeforeEach
     public void setUp() {
-
-        MockitoAnnotations.openMocks(this);
+        MockitoAnnotations.initMocks(this);
 
         UserRole userRoleUser = new UserRole();
         userRoleUser.setName("ROLE_USER");
@@ -48,7 +61,121 @@ public class UserServiceTest {
         userModel.setRoles(Collections.singleton(userRoleUser));
 
         when(userRepository.findByEmail("jan.kot@gmail.com")).thenReturn(Optional.of(userModel));
+
         when(userRepository.findByEmail("notfound@example.com")).thenReturn(Optional.empty());
+
+        when(userRepository.findByEmail("newuser@example.com")).thenReturn(Optional.empty());
+
+        when(userRepository.save(any(UserModel.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        VerificationToken mockToken = new VerificationToken();
+        when(verificationTokenRepository.save(any(VerificationToken.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(verificationTokenRepository.findByToken("some-token")).thenReturn(Optional.of(mockToken));
+    }
+
+    @Test
+    void whenFindAllUsers_thenReturnsListOfUsers() {
+        UserModel user1 = new UserModel();
+        user1.setEmail("user1@example.com");
+        UserModel user2 = new UserModel();
+        user2.setEmail("user2@example.com");
+        List<UserModel> userList = Arrays.asList(user1, user2);
+
+        when(userRepository.findAll()).thenReturn(userList);
+
+        List<UserModel> foundUsers = userService.findAllUsers();
+
+        assertThat(foundUsers).hasSize(2);
+        assertThat(foundUsers.get(0).getEmail()).isEqualTo("user1@example.com");
+        assertThat(foundUsers.get(1).getEmail()).isEqualTo("user2@example.com");
+    }
+
+    @Test
+    void whenValidId_thenUserShouldBeFound() {
+        UserModel user = new UserModel();
+        user.setId(1);
+        user.setEmail("user@example.com");
+
+        when(userRepository.findById(1)).thenReturn(Optional.of(user));
+
+        UserModel found = userService.findUserById(1);
+
+        assertThat(found.getId()).isEqualTo(user.getId());
+        assertThat(found.getEmail()).isEqualTo(user.getEmail());
+    }
+
+    @Test
+    void whenInvalidId_thenThrowException() {
+        when(userRepository.findById(anyInt())).thenReturn(Optional.empty());
+
+        assertThrows(RuntimeException.class, () -> userService.findUserById(99));
+    }
+    @Test
+    public void whenAddUser_thenUserIsSaved() {
+        UserModel newUser = new UserModel();
+        newUser.setEmail("test@example.com");
+        newUser.setPassword("password");
+
+        userService.addUser(newUser);
+
+        verify(userRepository, times(1)).save(newUser);
+    }
+
+    @Test
+    void whenEditUser_thenUserIsSaved() {
+        UserModel user = new UserModel();
+        user.setId(1);
+        user.setEmail("user@example.com");
+        user.setPassword("password");
+
+        userService.saveEditUser(user);
+
+        verify(userRepository, times(1)).save(user);
+    }
+
+    @Test
+    public void whenValidEmail_thenUserShouldBeFound() {
+        String email = "jan.kot@gmail.com";
+        UserModel found = userService.findUserByEmail(email);
+
+        assertEquals(found.getEmail(), email);
+    }
+
+    @Test
+    public void whenInvalidEmail_thenThrowUserNotFoundException() {
+        assertThrows(UserNotFoundException.class, () -> {
+            userService.findUserByEmail("invalid@example.com");
+        });
+    }
+
+    @Test
+    public void whenRegisterNewUser_thenUserIsSaved() {
+        SignUpDto signUpDto = new SignUpDto();
+        signUpDto.setEmail("newuser@example.com");
+        signUpDto.setPassword("password");
+
+        UserModel registeredUser = userService.registerNewUser(signUpDto);
+
+        assertNotNull(registeredUser);
+        verify(userRepository, times(1)).save(any(UserModel.class));
+    }
+
+    @Test
+    public void whenRegisterExistingUser_thenThrowUserAlreadyExistsException() {
+        SignUpDto signUpDto = new SignUpDto();
+        signUpDto.setEmail("jan.kot@gmail.com");
+
+        assertThrows(UserAlreadyExistsException.class, () -> {
+            userService.registerNewUser(signUpDto);
+        });
+    }
+
+    @Test
+    public void whenDeleteUser_thenUserShouldBeDeleted() {
+        Integer userId = 1;
+        userService.deleteUser(userId);
+
+        verify(userRepository, times(1)).deleteById(userId);
     }
 
     @Test
@@ -62,21 +189,44 @@ public class UserServiceTest {
     }
 
     @Test
-    public void loadUserByUsername_UserNotFound_ThrowsUsernameNotFoundException() {
-        assertThrows(UsernameNotFoundException.class, () -> {
+    public void loadUserByUsername_UserNotFound_ThrowsUserNotFoundException() {
+        assertThrows(UserNotFoundException.class, () -> {
             userService.loadUserByUsername("notfound@example.com");
         });
     }
 
     @Test
     void shouldReturnEmptyListIfNothingInDb() {
-        when(userRepository.findAll()).thenReturn(List.of());
-        when(userRoleRepository.findAll()).thenReturn(List.of());
+        when(userRepository.findAll()).thenReturn(Collections.emptyList());
+        when(userRoleRepository.findAll()).thenReturn(Collections.emptyList());
 
         List<UserModel> result = userService.findAllUsers();
 
         assertThat(result).isEmpty();
     }
 
+    @Test
+    void whenValidToken_thenUserIsEnabled() {
+        UserModel user = new UserModel();
+        user.setEnabled(false);
+
+        VerificationToken token = new VerificationToken();
+        token.setToken("valid-token");
+        token.setUserModel(user);
+
+        when(verificationTokenRepository.findByToken("valid-token")).thenReturn(Optional.of(token));
+
+        userService.confirmUserRegistration("valid-token");
+
+        assertTrue(user.getEnabled());
+        verify(userRepository, times(1)).save(user);
+    }
+
+    @Test
+    void whenInvalidToken_thenThrowException() {
+        when(verificationTokenRepository.findByToken("invalid-token")).thenReturn(Optional.empty());
+
+        assertThrows(RuntimeException.class, () -> userService.confirmUserRegistration("invalid-token"));
+    }
 
 }
